# danbi_task_python

./: README.md  pyproject.toml
common/: models.py
config/: settings.py  urls.py
mytask/: urls.py  views.py
subtasks/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
subtasks/migrations/: 0001_initial.py  0002_subtask_task.py  0003_auto_20231012_1043.py  0004_rename_completed_data_subtask_completed_date.py
tasks/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_rename_created_user_task_create_user.py  0003_rename_completed_data_task_completed_date.py
teams/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
teams/migrations/: 0001_initial.py  0002_auto_20231012_0819.py  0003_team_member.py  0004_auto_20231013_1142.py  0005_alter_team_member.py  0006_auto_20231013_1229.py  0007_rename_member_team_members.py  0008_auto_20231013_1242.py
users/: admin.py  models.py  serializers.py  tests.py  views.py
users/migrations/: 0001_initial.py  0002_auto_20231013_1207.py  0003_remove_user_team.py
